src/objects/Process_Step__c.object
<CustomObject>
    <description>XLR8 custom object for the Process Engine steps. This is the child object to the Process Engine object and holds all of the steps for a given process.</description>
    <fields>
        <fullName>Account_Team_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assigned to Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SuperTask_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complete_Step__c</fullName>
        <formula>IF(
OR( 
LEFT($Api.Partner_Server_URL_290, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_290)) = &apos;https://xlr8dev-dev-ed.my.salesforce.com/&apos;, 
LEFT($Api.Partner_Server_URL_290, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_290)) = &apos;https://xlr8stage-dev-ed.my.salesforce.com/&apos;) ,

IF (ISPICKVAL( Status__c , &apos;Open&apos; ), 
HYPERLINK(&quot;/apex/handleStepOperation?process_id=&quot;&amp;Process__c&amp;&quot;&amp;called_for=completeStep&amp;id=&quot;&amp;Id&amp;&quot;&amp;task_created=&quot; &amp;Task_Created__c, IMAGE(&quot;/resource/step_incomplete&quot;, &quot;Complete Step&quot;,32,32),&quot;_self&quot;), 
IMAGE(&quot;/resource/step_complete&quot;, &quot;Complete Step&quot;,32,32)),

IF (ISPICKVAL( Status__c , &apos;Open&apos; ), 
HYPERLINK(&quot;/apex/XLR8CS__handleStepOperation?process_id=&quot;&amp;Process__c&amp;&quot;&amp;called_for=completeStep&amp;id=&quot;&amp;Id&amp;&quot;&amp;task_created=&quot; &amp;Task_Created__c, IMAGE(&quot;/resource/XLR8CS__step_incomplete&quot;, &quot;Complete Step&quot;,32,32),&quot;_self&quot;), 
IMAGE(&quot;/resource/XLR8CS__step_complete&quot;, &quot;Complete Step&quot;,32,32))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete Step</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SuperTask_Steps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Create_Task__c</fullName>
        <formula>IF(
OR( 
LEFT($Api.Partner_Server_URL_290, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_290)) = &apos;https://xlr8dev-dev-ed.my.salesforce.com/&apos;, 
LEFT($Api.Partner_Server_URL_290, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_290)) = &apos;https://xlr8stage-dev-ed.my.salesforce.com/&apos;) ,

IF( ! ISPICKVAL(Status__c, &apos;Open&apos;) &amp;&amp; Task_Created__c == &apos;N&apos; ,&apos;&apos;,IF(Assigned_To__c == null,IMAGE(&quot;/resource/AssignStepUser&quot; , &quot;Assign a user to the process step before creating a task&quot;,24,24),
IF(Task_Created__c == null || Task_Created__c == &apos;N&apos;
, HYPERLINK(&quot;/apex/handleStepOperation?process_id=&quot;&amp;Process__c&amp;&quot;&amp;called_for=createTask&amp;id=&quot;&amp;Id&amp;&quot;&amp;task_created=&quot; &amp;Task_Created__c 
,IMAGE(&quot;/resource/Task_image_create&quot; , &quot;Create Task&quot;,24,24),&quot;_self&quot;) 
, HYPERLINK(&quot;/apex/handleStepOperation?process_id=&quot;&amp;Process__c&amp;&quot;&amp;called_for=createTask&amp;id=&quot;&amp;Id&amp;&quot;&amp;task_created=&quot; &amp;Task_Created__c
, IMAGE(&quot;/resource/Task_image_done&quot;, &quot;Task Created&quot;,24,24),&quot;_self&quot;)))), 

IF( ! ISPICKVAL(Status__c, &apos;Open&apos;) &amp;&amp; Task_Created__c == &apos;N&apos; ,&apos;&apos;,IF(Assigned_To__c == null,IMAGE(&quot;/resource/XLR8CS__AssignStepUser&quot; , &quot;Assign a user to the process step before creating a task&quot;,24,24),
IF(Task_Created__c == null || Task_Created__c == &apos;N&apos;
, HYPERLINK(&quot;/apex/XLR8CS__handleStepOperation?process_id=&quot;&amp;Process__c&amp;&quot;&amp;called_for=createTask&amp;id=&quot;&amp;Id&amp;&quot;&amp;task_created=&quot; &amp;Task_Created__c 
,IMAGE(&quot;/resource/XLR8CS__Task_image_create&quot; , &quot;Create Task&quot;,24,24),&quot;_self&quot;) 
, HYPERLINK(&quot;/apex/XLR8CS__handleStepOperation?process_id=&quot;&amp;Process__c&amp;&quot;&amp;called_for=createTask&amp;id=&quot;&amp;Id&amp;&quot;&amp;task_created=&quot; &amp;Task_Created__c
, IMAGE(&quot;/resource/XLR8CS__Task_image_done&quot;, &quot;Task Created&quot;,24,24),&quot;_self&quot;))))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_In_Days__c</fullName>
        <inlineHelpText>Number of days the task is expected to require for completion. Enter as a whole number, otherwise it will be rounded. Task due date will be calculated based on this value.  A duration of 0 (zero) will result in a task due date equal to the current date.</inlineHelpText>
        <label>Duration In Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Predecessor_Step_IDs__c</fullName>
        <label>Predecessor_Step IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Steps__c</fullName>
        <label>Predecessor Steps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Process Steps</relationshipLabel>
        <relationshipName>Process_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step_Details__c</fullName>
        <label>Step Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_Created__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <label>Task Created</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Process Step</label>
    <nameField>
        <label>Process Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Process_Step_Status_cannot_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( TEXT(Status__c ) )</errorConditionFormula>
        <errorMessage>Process Step Status cannot be blank</errorMessage>
    </validationRules>
</CustomObject>